# arithmetic_parser

./: Cargo.toml  README.md  makefile
src/: calc.pest  lib.rs  main.rs  test.txt  test.txt.out
tests/: grammar_tests.rs
