[package]
name = "arithmetic_parser_kma"
version = "0.1.2"
edition = "2021"
description = "Arithmetic expression calculator parser."
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
lazy_static = "1.4.0"
peg = "0.8.2"
pest = "2.7.5"
pest_derive = "2.7.5"
thiserror = "1.0.50"
